# myhealth-rust

./: .gitignore  Cargo.toml  Makefile  README.md  TODO  myhealth.db  test.sh
lib/chart/: Cargo.toml
lib/chart/src/: lib.rs
lib/html/: Cargo.toml
lib/html/src/: accordion.rs  attrs.rs  b.rs  canvas.rs  div.rs  h.rs  i.rs  lib.rs  s.rs  script.rs  span.rs  table.rs
lib/model/: Cargo.toml
lib/model/src/: backup.rs  lib.rs
lib/storage/: Cargo.toml
lib/storage/src/: lib.rs  storage_sqlite.rs
lib/storage/src/storage_sqlite/: functions.rs  migrations.rs  queries.rs  test.rs
lib/types/: Cargo.toml
lib/types/src/: timestamp.rs
services/bot/: Cargo.toml
services/bot/src/: app.rs  args.rs  cmd.rs  cmd_proc.rs  config.rs  lib.rs  messages.rs  service.rs
services/bot/src/cmd/: bundle.rs  cal_calc.rs  food.rs  journal.rs  maintenance.rs  sport.rs  user_settings.rs  weight.rs
services/service/: Cargo.toml
services/service/src/: lib.rs
src/: cli.rs  main.rs
src/components/: storage.rs
src/components/storage/: model.rs  storage_sqlite.rs
src/services/: bot.rs
src/services/bot/: cmd_proc.rs  config.rs  service.rs
