[package]
name = "myhealth"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "myhealth"
path = "src/main.rs"

[workspace]
members = [
    ".",
    "lib/model",
    "lib/storage",
    "lib/types",
    "services/service",
    "services/bot"
]

[workspace.dependencies]
model = { path = "lib/model" }
storage = { path = "lib/storage" }
types = { path = "lib/types" }
service = { path = "services/service" }
bot = { path = "services/bot" }

chrono = "0"
anyhow = "1"
teloxide = { version = "0.13", default-features = false, features = ["macros", "rustls", "ctrlc_handler"] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.32.0", features = ["bundled"] }

[dependencies]
bot = { workspace = true }
service = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true }
