[package]
name = "myhealth"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "myhealth"
path = "src/main.rs"

[workspace]
members = [
    ".",
    "lib/model",
    "lib/storage",
    "lib/types",
    "services/service",
    "services/bot"
, "lib/html", "lib/chart"]

[workspace.dependencies]
model = { path = "lib/model" }
storage = { path = "lib/storage" }
types = { path = "lib/types" }
html = { path = "lib/html" }
chart = { path = "lib/chart" }
service = { path = "services/service" }
bot = { path = "services/bot" }

chrono = "0"
chrono-tz = "0"
anyhow = "1"
teloxide = { version = "0.13", default-features = false, features = ["macros", "rustls", "ctrlc_handler"] }
log = "0"
env_logger = "0"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.32.0", features = ["bundled", "functions"] }
tempfile = "3"
thiserror = "2"
minijinja = "2"
serde = "1"
serde_json = "1"
flate2 = "1"

[dependencies]
bot = { workspace = true }
service = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true }
