[package]
name = "storage"
version = "0.1.0"
edition = "2021"

[dependencies]
model = { workspace = true }
types = { workspace = true }

anyhow = { workspace = true }
rusqlite = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }