[package]
name = "bot"
version = "0.1.0"
edition = "2021"

[dependencies]
storage = { workspace = true }
model = { workspace = true }
service = { workspace = true }
types = { workspace = true }

teloxide = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
